src/test/ui/object-safety/object-safety-mentions-Self.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:22:30
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     fn bar(&self, x: &Self);
   |                      ----- ...because method `bar` references the `Self` type in this parameter
...
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                              ^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = help: consider moving `bar` to another trait

error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:28:30
   |
LL | trait Baz {
   |       --- this trait cannot be made into an object...
LL |     fn baz(&self) -> Self;
   |                      ---- ...because method `baz` references the `Self` type in its return type
...
LL | fn make_baz<T:Baz>(t: &T) -> &dyn Baz {
   |                              ^^^^^^^^ the trait `Baz` cannot be made into an object
   |
   = help: consider moving `baz` to another trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
